--- a/stylesheets/shared-package/dropdown.less
+++ b/stylesheets/shared-package/dropdown.less
@@ -20,6 +20,7 @@
   right: 6px;
   margin-top: -3px;
 }
+
 // The pulldown arrow next to the menu title.
 .caret {
   #popoverArrow > .top(4px);
@@ -27,6 +28,7 @@
   margin-left: 2px;
   margin-bottom: 2px;
 }
+
 // On hover, make the menu title arrow solid.
 .dropdown-toggle:hover .caret,
 .open.dropdown .caret {
@@ -43,6 +45,31 @@
 .dropdown.open > .dropdown-menu {
   display: block;
 }
+
+/*
+American Khan:
+
+.dropdown-menu {
+  position: absolute;
+  z-index: 1000;
+  float: left;
+  display: none;
+  list-style: none;
+  background-color: #ffffff;
+  border-color: #94a170;
+  padding: 3px 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 24px;
+  border: 1px solid #94a170;
+  border-bottom: 1px solid #999;
+  -webkit-box-shadow: 0 5px 8px #444444;
+  -moz-box-shadow: 0 5px 8px #444444;
+  box-shadow: 0 5px 8px #444444;
+}
+*/
+
 .dropdown-menu {
   position: absolute;
   z-index: @zindexDropdown;
@@ -69,8 +96,7 @@
 
 // Dropdown menu hover interaction
 
-.dropdown-menu > li
-{
+.dropdown-menu > li {
   color: @menuInactiveTextColor;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
@@ -80,26 +106,22 @@
     &:link,
     &:visited {
       &:hover,
-      &:focus {
-        // This ugly section is necessary to override sitewide defaults
-        // for displaying links.
+      &:focus { // This ugly section is necessary to override sitewide defaults
+      // for displaying links.
         text-decoration: none;
         color: @menuInactiveTextColor;
       }
     }
   }
-  // This is a hack to get Chrome's renderer to kick in
-  // and draw the text properly.
-  -webkit-transform: translate3d(0,0,0);
+// This is a hack to get Chrome's renderer to kick in
+// and draw the text properly.
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 // This item has its submenu open:
-.dropdown-menu.child-active > li.hover-active,
-// No other item has a submenu open, and we hover:
-.dropdown-menu.none-active > li:hover,
-// The menu does not contain any submenus, and we hover:
-.dropdown-menu.no-submenus > li:hover
-{
+.dropdown-menu.child-active > li.hover-active, // No other item has a submenu open, and we hover:
+.dropdown-menu.none-active > li:hover, // The menu does not contain any submenus, and we hover:
+.dropdown-menu.no-submenus > li:hover {
   text-decoration: none;
   background-color: @menuHighlightColor;
   border-top: 1px solid @menuHighlightBorderColor;
@@ -110,9 +132,8 @@
     text-shadow: 0 -1px 0 @menuHighlightBorderColor;
     color: @menuActiveTextColor;
     font-weight: bold;
-    text-decoration: none;
-    // Webkit, when showing bold text, offsets it by a pixel.
-    // Use this as a corrector.
+    text-decoration: none; // Webkit, when showing bold text, offsets it by a pixel.
+  // Use this as a corrector.
     -webkit-transform: translateY(-1px);
   }
   > div.right-arrow {
@@ -120,9 +141,9 @@
     position: absolute;
     right: 6px;
   }
-  // This is a hack to get Chrome's renderer to kick in
-  // and draw the text properly.
-  -webkit-transform: translate3d(0,0,0);
+// This is a hack to get Chrome's renderer to kick in
+// and draw the text properly.
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 // Items with submenus aren't themselves links.
@@ -135,9 +156,8 @@
 .dropdown-menu > li.is-subheader:hover,
 .dropdown-menu > li.is-subheader.hover-active {
   cursor: default;
-  background-color: transparent;
-  // Don't specify border-top, so it may be defined
-  // by the later has-divider rule.
+  background-color: transparent; // Don't specify border-top, so it may be defined
+// by the later has-divider rule.
   border-bottom: 1px solid transparent;
 
   > a {
@@ -148,9 +168,8 @@
     text-shadow: none;
     #font > .sans-serif(@menuSubheaderFontSize,
                         normal,
-                        @menuSubheaderLineHeight);
-    // Cancel compensation used in regular menu item
-    // highlight (see above).
+                        @menuSubheaderLineHeight); // Cancel compensation used in regular menu item
+  // highlight (see above).
     -webkit-transform: translateY(0px);
   }
 }
