--- a/templates/profiles/exercise_problems_graph.html
+++ b/templates/profiles/exercise_problems_graph.html
@@ -94,7 +94,7 @@ function exercise_url(point) {
                                             '</span><b style="font-size: 15px;"> - ' + (point.correct ? "Correct" : "Incorrect") +
                                             (point.count_hints ? '<span style="color: red; font-style: italic; font-weight:bold">(Hint gebruikt)' : '') +
                                             '</b><br/>' +
-                                            point.time_used + ' used<br/><br/>' +
+                                            point.time_used + ' gebruikt<br/><br/>' +
                                             point.timesince +
                                             '<br/><br/><em>Klik op de grafiek om dit probleem te zien</em>.';
                                 }
