text-sizes to use relative dimensions instead of px, (replaced px with em)

--- a/stylesheets/shared-package/buttons.less
+++ b/stylesheets/shared-package/buttons.less
@@ -104,7 +104,7 @@
 
     &.social-button {
         display: inline-block;    
-        font-size: 12px;
+        font-size: 0.75;
         font-weight: bold;
         margin-bottom: 9px;
         max-width: 200px;
