--- a/stylesheets/shared-package/variables.less
+++ b/stylesheets/shared-package/variables.less
@@ -37,7 +37,7 @@
 
 
 // Typography
-@baseFontSize:          12px;
+@baseFontSize:          1em;
 @baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
 @baseLineHeight:        22px;
 @textColor:             #444;
@@ -136,4 +136,4 @@
 // Metrics
 @menuLineHeight:				24px;
 @menuSubheaderLineHeight:		17px;
-@menuSubheaderFontSize:			9px;
+@menuSubheaderFontSize:			0.5em;
