--- a/stylesheets/shared-package/bootstrap-close.less
+++ b/stylesheets/shared-package/bootstrap-close.less
@@ -3,7 +3,7 @@
  */
 .close {
     float: right;
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: bold;
     line-height: @baseLineHeight;
     color: @black;
