--- a/stylesheets/topic-package/topic-page.css
+++ b/stylesheets/topic-package/topic-page.css
@@ -390,3 +390,16 @@ a.main-video-link:hover {
     position: relative;
     z-index: 2;
 }
+
+/* Responsive stuff */
+@media (max-width: 767px) {
+    /* Tablets */
+}
+
+@media (max-width: 480px) {
+    /* Phones */
+    .topic-page-content > .container > .nav-pane {
+        width: 100%;
+        //Javascript fokt height op
+    }
+}
